# Whisp

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/commands/: reinstall.md  release.md
.github/workflows/: build-mac.yml  build-win.yml  release.yml
_design/: architecture.md
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  history.rs  hotkey.rs  lib.rs  main.rs  paste.rs  permissions.rs  recorder.rs  settings.rs  sound.rs  transcribe.rs
src/overlay/: Overlay.css  Overlay.tsx  index.html  main.tsx
