[package]
name = "nanowhisper"
version = "1.0.3"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "nanowhisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2.3"
tauri-plugin-opener = "2.5"
tauri-plugin-global-shortcut = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.16"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
rusqlite = { version = "0.37", features = ["bundled"] }
rusqlite_migration = "2.3"
anyhow = "1"
chrono = "0.4"
dirs = "6.0"
dotenvy = "0.15"
enigo = "0.6"
log = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_LibraryLoader"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { version = "0.6.2", default-features = false, features = ["alloc"] }
core-foundation = "0.10"
objc2 = { version = "0.6.4", default-features = false, features = ["std"] }
objc2-av-foundation = { version = "0.3.2", default-features = false, features = ["AVCaptureDevice", "AVMediaFormat", "block2"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
